crates/snapshot-tests/tests/snapshots/parser__bad_leading_zeros__pos_two_zeros.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidInteger]: invalid integer: leading zeros are not allowed at `a`
  ┌─ pos_two_zeros:1:5
  │
1 │ a = +00
  │     ^^^ invalid integer: leading zeros are not allowed


error: invalid integer: leading zeros are not allowed at `a`
 --> pos_two_zeros:1:5
  |
1 | a = +00
  |     ^^^ invalid integer: leading zeros are not allowed
Error {
    kind: "InvalidInteger",
    message: "invalid integer: leading zeros are not allowed",
    span: 4..7,
    path: Some(
        "a",
    ),
}
